# tui2web

./: .gitignore  Cargo.toml  README.md  build.sh  flake.nix  package.json
.github/workflows/: pages.yml
crates/tui2web/: Cargo.toml
crates/tui2web/src/: backend.rs  fs.rs  git.rs  lib.rs
example/: Cargo.toml
example/src/: lib.rs
web/: index.html  main.js
