[package]
name = "tui2web-example"
version = "0.1.0"
edition = "2021"
description = "Example ratatui counter app compiled to WebAssembly with tui2web"
license = "MIT"

[lib]
crate-type = ["cdylib"]

# wasm-opt is enabled by default in wasm-pack release builds.
# Set to false here so the build works without the binaryen toolchain installed;
# re-enable (remove this section) for production builds to reduce WASM size.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
tui2web = { path = "../crates/tui2web" }
ratatui = { version = "0.26", default-features = false }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
